--- a/springcloud-ribbon/src/main/resources/application.yml
+++ b/springcloud-ribbon/src/main/resources/application.yml
@@ -5,10 +5,10 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8011/eureka/
 server:
-  port: 8012
+  port: 8013
 spring:
   application:
-    name: service-hi
+    name: service-ribbon
 logging:
   level:
     root: debug
