--- a/springcloud-ribbon/pom.xml
+++ b/springcloud-ribbon/pom.xml
@@ -23,5 +23,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
+		<!--  fegin熔断,仪表盘展示	-->
+		<!-- <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+        </dependency> -->
 	</dependencies>
 </project>
