--- a/springcloud-bus/pom.xml
+++ b/springcloud-bus/pom.xml
@@ -8,16 +8,16 @@
 		<artifactId>springcloud-demo</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>springcloud-configserver</artifactId>
-	<name>springcloud-configserver</name>
+	<artifactId>springcloud-bus</artifactId>
+	<name>springcloud-bus</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.fc.springcloud</groupId>
