add zipkin module

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.fc.springcloud</groupId>
@@ -13,7 +14,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.6.RELEASE</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -65,8 +66,9 @@
 		<module>springcloud-eureka-client</module>
 		<module>springcloud-ribbon</module>
 		<module>springcloud-test</module>
-    <module>springcloud-zuul</module>
-    <module>springcloud-configserver</module>
-    <module>springcloud-bus</module>
-  </modules>
+		<module>springcloud-zuul</module>
+		<module>springcloud-configserver</module>
+		<module>springcloud-bus</module>
+		<module>springcloud-zipkin</module>
+	</modules>
 </project>
