--- a/springcloud-test/src/main/resources/application.yml
+++ b/springcloud-test/src/main/resources/application.yml
@@ -8,6 +8,11 @@ eureka:
 spring:
   application:
     name: service-hi
+  zipkin: 
+    base-url: http://localhost:8018
+  sleuth: 
+    sampler: 
+     percentage: 1
 logging:
   level:
     root: debug
