--- a/springcloud-docker-test/pom.xml
+++ b/springcloud-docker-test/pom.xml
@@ -18,16 +18,16 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
+<!-- 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>0.4.3</version>
 				<configuration>
-					<!-- 镜像名字 -->
+					镜像名字
 					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-					<!-- 指明Dockerfile文件的所在目录 -->
+					指明Dockerfile文件的所在目录
 					<dockerDirectory>src/main/docker</dockerDirectory>
-					<!--  resources是指那些需要和 Dockerfile 放在一起，在构建镜像时使用的文件，一般应用 jar 包需要纳入  -->
+					 resources是指那些需要和 Dockerfile 放在一起，在构建镜像时使用的文件，一般应用 jar 包需要纳入 
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
@@ -36,7 +36,7 @@
 						</resource>
 					</resources>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 </project>
