--- a/pom.xml
+++ b/pom.xml
@@ -83,28 +83,28 @@
 		<module>springcloud-configserver</module>
 		<module>springcloud-bus</module>
 		<module>springcloud-zipkin</module>
-		<module>springcloud-docker-test</module>
+		
 	</modules>
 	<build>
 		<pluginManagement>
-			<!-- <plugins>
+			<plugins>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 				</plugin>
-				docker打包配置
+				<!-- docker打包配置 -->
 				<plugin>
 					<groupId>com.spotify</groupId>
 					<artifactId>docker-maven-plugin</artifactId>
 					<version>0.4.3</version>
 					<configuration>
-						docker镜像的前缀
+						<!-- docker镜像的前缀 -->
 						<docker.image.prefix>springcloud</docker.image.prefix>
-						镜像名字
-						<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-						指明Dockerfile文件的所在目录
+						<!-- 镜像名字 -->
+						<imageName>${project.name}:${project.version}</imageName>
+						<!-- 指明Dockerfile文件的所在目录 -->
 						<dockerDirectory>src/main/docker</dockerDirectory>
-						resources是指那些需要和 Dockerfile 放在一起，在构建镜像时使用的文件，一般应用 jar 包需要纳入
+						<!-- resources是指那些需要和 Dockerfile 放在一起，在构建镜像时使用的文件，一般应用 jar 包需要纳入 -->
 						<resources>
 							<resource>
 								<targetPath>/</targetPath>
@@ -114,7 +114,7 @@
 						</resources>
 					</configuration>
 				</plugin>
-			</plugins> -->
+			</plugins>
 		</pluginManagement>
 	</build>
 </project>
