--- a/springcloud-zipkin/pom.xml
+++ b/springcloud-zipkin/pom.xml
@@ -20,7 +20,7 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--  提供链路追踪服务端依赖	-->
+		<!-- 提供链路追踪服务端依赖 -->
 		<dependency>
 			<groupId>io.zipkin.java</groupId>
 			<artifactId>zipkin-server</artifactId>
@@ -30,4 +30,33 @@
 			<artifactId>zipkin-autoconfigure-ui</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<!-- docker打包配置 -->
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<configuration>
+					<!-- docker镜像的前缀 -->
+					<!-- <docker.image.prefix>springcloud</docker.image.prefix> -->
+					<!-- 镜像名字 -->
+					<imageName>${project.name}:${project.version}</imageName>
+					<!-- 指明Dockerfile文件的所在目录 -->
+					<dockerDirectory>src/main/docker</dockerDirectory>
+					<!-- resources是指那些需要和 Dockerfile 放在一起，在构建镜像时使用的文件，一般应用 jar 包需要纳入 -->
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
