--- a/springcloud-eureka-client/pom.xml
+++ b/springcloud-eureka-client/pom.xml
@@ -30,6 +30,10 @@
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
+				<configuration>
+					<!-- 镜像名字 -->
+					<imageName>${project.name}/8012:${project.version}</imageName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
