--- a/springcloud-test/pom.xml
+++ b/springcloud-test/pom.xml
@@ -42,20 +42,8 @@
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<configuration>
-					<!-- docker镜像的前缀 -->
-					<!-- <docker.image.prefix>springcloud</docker.image.prefix> -->
 					<!-- 镜像名字 -->
-					<imageName>${project.name}:${project.version}</imageName>
-					<!-- 指明Dockerfile文件的所在目录 -->
-					<dockerDirectory>src/main/docker</dockerDirectory>
-					<!-- resources是指那些需要和 Dockerfile 放在一起，在构建镜像时使用的文件，一般应用 jar 包需要纳入 -->
-					<resources>
-						<resource>
-							<targetPath>/</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}.jar</include>
-						</resource>
-					</resources>
+					<imageName>${project.name}/8014:${project.version}</imageName>
 				</configuration>
 			</plugin>
 		</plugins>
