--- a/springcloud-eureka-client/src/main/resources/bootstrap.yml
+++ b/springcloud-eureka-client/src/main/resources/bootstrap.yml
@@ -1,10 +1,3 @@
 spring: 
- application: 
-  name: config-client
- cloud: 
-  config: 
-   label: master
-   profile: dev
-   uri: http://localhost:8016/
-server:
-  port: 8012
+ profiles: 
+  active: dev
