--- a/springcloud-ribbon/src/main/resources/application.yml
+++ b/springcloud-ribbon/src/main/resources/application.yml
@@ -1,32 +1,3 @@
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8011/eureka/
-server:
-  port: 8013
-spring:
-  application:
-    name: service-ribbon
-  zipkin: 
-    base-url: http://localhost:8018
-  sleuth: 
-    sampler: 
-    #设置采样百分比，默认是0.1，这儿调为1是为了测试，以防少量请求调用不能及时看到链路数据的情况
-     percentage: 1
-logging:
-  level:
-    root: debug
-  file: ../logs/ribbon-log.log
-feign:
- hystrix:
-  enabled: true
-#hystrix调用方法的超时时间，默认是1000毫秒，会报超时
-hystrix: 
- command: 
-  default: 
-   execution: 
-    isolation: 
-     thread: 
-      timeoutInMilliseconds: 5000
+spring: 
+ profiles: 
+  active: dev
