--- a/springcloud-test/src/main/resources/application-prod.yml
+++ b/springcloud-test/src/main/resources/application-prod.yml
@@ -3,13 +3,12 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8011/eureka/
-
-spring:
+      defaultZone: http://eureka-server/eureka/
+spring: 
   application:
     name: service-hi
   zipkin: 
-    base-url: http://localhost:8018
+    base-url: http://zipkin
   sleuth: 
     sampler: 
      percentage: 1
