--- a/springcloud-configserver/src/main/docker/Dockerfile
+++ b/springcloud-configserver/src/main/docker/Dockerfile
@@ -6,6 +6,6 @@ VOLUME /tmp
 ADD ./springcloud-configserver-0.0.1-SNAPSHOT.jar springcloud-configserver.jar
 #RUN bash -c 'touch /app.jar'
 #指定Docker容器启动时执行的命令，可以多次设置，但是只有最后一个有效。
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/springcloud-configserver.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/springcloud-configserver.jar","--spring.profiles.active=prod"]
 #为Docker容器设置对外的端口号。在启动时，可以使用-p选项或者-P选项。
 EXPOSE 8016
