--- a/springcloud-eureka-client/pom.xml
+++ b/springcloud-eureka-client/pom.xml
@@ -37,4 +37,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+		<repository>
+			<id>NexusRepository</id>
+			<name>private-library-releases</name>
+			<url>http://192.168.0.37:8081/nexus/content/repositories/myRepositories</url>
+		</repository>
+	</distributionManagement>
 </project>
