--- a/springcloud-eureka-client/src/main/resources/application-prod.yml
+++ b/springcloud-eureka-client/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://eureka-server/eureka/
+      defaultZone: http://eureka-server:8011/eureka/
 spring:
   application:
     name: service-hi
