--- a/springcloud-ribbon/src/main/resources/application-prod.yml
+++ b/springcloud-ribbon/src/main/resources/application-prod.yml
@@ -4,14 +4,14 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       #对应docker容器名进行通信
-      defaultZone: http://eureka-server/eureka/
+      defaultZone: http://eureka-server:8011/eureka/
 server:
   port: 8013
 spring:
   application:
     name: service-ribbon
   zipkin: 
-    base-url: http://zipkin
+    base-url: http://zipkin:8018
   sleuth: 
     sampler: 
     #设置采样百分比，默认是0.1，这儿调为1是为了测试，以防少量请求调用不能及时看到链路数据的情况
