--- a/springcloud-test/src/main/resources/application-prod.yml
+++ b/springcloud-test/src/main/resources/application-prod.yml
@@ -3,12 +3,12 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://eureka-server/eureka/
+      defaultZone: http://eureka-server:8011/eureka/
 spring: 
   application:
     name: service-hi
   zipkin: 
-    base-url: http://zipkin
+    base-url: http://zipkin:8018
   sleuth: 
     sampler: 
      percentage: 1
