--- a/springcloud-zuul/src/main/resources/application-prod.yml
+++ b/springcloud-zuul/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://eureka-server/eureka/
+      defaultZone: http://eureka-server:8011/eureka/
 server:
   port: 8015
 spring:
